# Arduino_CLion_integration

./: CMakeLists.txt  README.md
arm/: CMakeLists.txt
avr/: CMakeLists.txt
